# qr-wireguard-ui

./: .gitignore  README.md  build_qrwg.sh
rootfs/kernel/: wireguard_orig.ko  wireguard_qr.ko
rootfs/qrwg/etc/init.d/: qrwg
rootfs/qrwg/qrwg/config/: asmcli.conf
rootfs/qrwg/root/: profile
rootfs/scripts/: Install.sh  Uninstall.sh  start_wg.sh  stop_wg.sh
webagent/: Makefile.arm64  README.txt  main.go
webagent/cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  build_arm64.sh
webagent/cpp/src/: client.cpp  common.cpp  main.cpp  server.cpp  vtyshell.cpp
webagent/cpp/src/inc/: client.h  client_event.h  common.h  file_descriptor.h  pipe_ret_t.h  server.h  server_observer.h  vtyshell.h
webagent/go/: Makefile  README.txt  go.mod
webagent/go/model/: message.go
webagent/go/server/: server.go  shell.go
webagent/server/: constants.go  server.go  shell.go
webui/beplugin/: constants.go  message.go  xsender.go
webui/wireguard-ui/: build_arm64.sh  main.go  package.json  prepare_assets.sh
webui/wireguard-ui/handler/: routes.go
webui/wireguard-ui/router/: router.go
webui/wireguard-ui/templates/: base.html  dashboard.html  login.html
wgshell/vtysh/: .gitignore  Makefile  build_nanopi.sh  cmd_init.c  command.c  command.h  encoding.c  encoding.h  linklist.c  linklist.h  memory.c  memory.h  parse.sh  vector.c  vector.h  vty.c  vty.h  vtysh.c  vtysh.h  vtysh_config.c  vtysh_config.h  vtysh_main.c
wgshell/vtysh/cmd/: cmd_bridge.c  cmd_common.c  cmd_fw.c  cmd_ip.c  cmd_tool.c  cmd_vpn.c
wgshell/vtysh/include/: containers.h
